<resources>
    <string name="app_name">PetsUp</string>
    <string name="login">ENTRAR</string>
    <string name="signup">CADASTRAR</string>
    <string name="go_back">Voltar</string>
    <string name="go_forward">Continuar</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="hidden_password">*******</string>
    <string name="services">• Banho e Tosa</string>
    <string name="status_open">• Aberto</string>
    <string name="status_closed">• Fechado</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="shorter_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="empty_pet_list_message">Parece que você ainda não cadastrou nenhum pet :c</string>
    <string name="add">ADICIONAR</string>
    <string name="dog">Cachorro</string>
    <string name="cat">Gato</string>
    <string name="rabbit">Coelho</string>
    <string name="rodent">Roedor</string>
    <string name="male">Macho</string>
    <string name="female">Fêmea</string>
    <string name="name">Nome</string>
    <string name="mydata">Meus dados</string>
    <string name="mypets">Meus pets</string>
    <string name="search">Buscar</string>
    <string name="filter">Filtrar</string>
    <string name="add_lower_case">Adicionar</string>
    <string name="date">Data</string>
    <string name="time">Horário</string>
    <string name="unfilled_date">Data: </string>
    <string name="unfilled_time">Horário: </string>
    <string name="unfilled_petshop">Pet shop: </string>
    <string name="unfilled_service">Serviço: </string>
    <string name="unfilled_pet">Pet: </string>
    <string name="unfilled_price">Valor: </string>
    <string name="myfavorites">Favoritos</string>
    <string name="back_to_start">Voltar para o início</string>
    <string name="retry">TENTAR NOVAMENTE</string>
    <string name="history">Histórico</string>
    <string name="agenda">Agenda</string>
    <string name="home">Início</string>
    <string name="profile">Perfil</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="save">Salvar alterações</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_booking_message">Agendamento realizado com sucesso!</string>
    <string name="error_booking_message">Ocorreu um erro inesperado. Por favor, tente novamente em alguns instantes.</string>
</resources>