<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/search_nav"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/my_pets_nav"
        android:icon="@drawable/baseline_pets_24"
        android:title="@string/mypets" />

    <item
        android:id="@+id/calendar_nav"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/agenda" />

    <item
        android:id="@+id/profile_nav"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>