<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/dog_image"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginTop="240dp"
            android:src="@drawable/dog_1" />

        <TextView
            android:id="@+id/message"
            style="@style/empty_pet_list_text_view"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/empty_pet_list_message"
            android:textAlignment="center" />

        <Button
            android:id="@+id/add_pet_button"
            style="@style/main_action_alternate_button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="addPet"
            android:text="@string/add" />

        <include layout="@layout/activity_bottom_menu" />

    </LinearLayout>

    <TextView
        android:id="@+id/section_title"
        style="@style/default_section_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/mypets"
        android:textColor="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_button"
        style="@style/vertical_button_with_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/baseline_search_24"
        android:text="@string/search"
        app:layout_constraintEnd_toStartOf="@id/add_button"
        app:layout_constraintTop_toTopOf="@id/add_button" />

    <Button
        android:id="@+id/add_button"
        style="@style/vertical_button_with_icon"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:drawableTop="@drawable/baseline_add_24"
        android:text="@string/add_lower_case"
        android:onClick="addPet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_title" />

</androidx.constraintlayout.widget.ConstraintLayout>