<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/arrow_back"
        style="@style/arrow_back_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/petsup_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/petsup_icon" />

    <TextView
        android:id="@+id/title_login_text_view"
        style="@style/default_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/petsup_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="16dp"
        android:text="Bem-vindo de volta!" />

    <TextView
        android:id="@+id/forms_email_text_view"
        style="@style/default_forms_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_login_text_view"
        android:layout_alignStart="@id/email_edit_text"
        android:text="@string/email" />


    <EditText
        android:id="@+id/email_edit_text"
        style="@style/default_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forms_email_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/default_edit_text_background"
        android:hint="Digite seu e-mail aqui" />

    <TextView
        android:id="@+id/forms_password_text_view"
        style="@style/default_forms_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        android:layout_alignStart="@id/email_edit_text"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_edit_text"
        style="@style/default_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forms_password_text_view"
        android:layout_alignStart="@id/forms_password_text_view"
        android:layout_marginBottom="12dp"
        android:background="@drawable/default_edit_text_background"
        android:hint="@string/hidden_password" />

    <TextView
        android:id="@+id/forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edit_text"
        android:layout_alignEnd="@id/password_edit_text"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/signika"
        android:text="Esqueci minha senha"
        android:textColor="@color/orange"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_button"
        style="@style/main_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_text_view"
        android:layout_alignStart="@id/password_edit_text"
        android:text="@string/login" />

    <Button
        android:id="@+id/redirect_to_signup_button"
        style="@style/secondary_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_alignStart="@id/login_button"
        android:text="Criar uma conta" />

</RelativeLayout>