<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/arrow_back"
        style="@style/arrow_back_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/section_title"
        style="@style/purple_subtitle_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="Digite o nome do seu pet"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_back" />

    <TextView
        android:id="@+id/name_text_view"
        style="@style/default_forms_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@id/section_title"
        app:layout_constraintTop_toBottomOf="@id/section_title" />

    <EditText
        android:id="@+id/name_edit_text"
        style="@style/default_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/default_edit_text_background"
        android:hint="Digite um nome aqui"
        app:layout_constraintStart_toStartOf="@id/name_text_view"
        app:layout_constraintTop_toBottomOf="@id/name_text_view" />

    <Button
        android:id="@+id/return_button"
        style="@style/small_secondary_action_button"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="back"
        android:text="@string/go_back"
        app:layout_constraintStart_toStartOf="@id/name_edit_text"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/small_main_action_button"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:onClick="confirm"
        android:text="@string/confirm"
        app:layout_constraintStart_toEndOf="@id/return_button"
        app:layout_constraintTop_toTopOf="@id/return_button" />

</androidx.constraintlayout.widget.ConstraintLayout>