<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/arrow_back"
        style="@style/arrow_back_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/section_title"
        style="@style/purple_subtitle_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="Selecione o sexo do seu pet"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/male_card_view"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/male_image_view"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/male_icon" />

            <TextView
                android:id="@+id/male_text_view"
                style="@style/default_pet_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/female_card_view"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/male_card_view"
        app:layout_constraintTop_toTopOf="@id/male_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/female_image_view"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/female_icon" />

            <TextView
                android:id="@+id/female_text_view"
                style="@style/default_pet_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/return_button"
        style="@style/small_secondary_action_button"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/go_back"
        android:onClick="back"
        app:layout_constraintStart_toStartOf="@id/male_card_view"
        app:layout_constraintTop_toBottomOf="@id/male_card_view" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/small_main_action_button"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/go_forward"
        android:onClick="next"
        app:layout_constraintStart_toEndOf="@id/return_button"
        app:layout_constraintTop_toTopOf="@id/return_button" />

    <include layout="@layout/activity_bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>